--- a/multi-currency-app/src/pages/Login.css
+++ b/multi-currency-app/src/pages/Login.css
@@ -4,7 +4,11 @@
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    /* margin-top: -50px; */
+
 }
+
+
 body.before {
     /* background-color: #435165; */
     background: url(marina.jpg);
@@ -12,6 +16,8 @@ body.before {
     background-position: center 30%;
     background-repeat: no-repeat;
     margin: 0;
+    /* margin-top: -50px; */
+    
 }
 
 /* Login and Register */
@@ -20,8 +26,11 @@ body.before {
     width: 400px;
     background-color: rgba(0,0,0,.5);
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-    margin: 100px auto;
+    /* margin: 300px auto; */
     opacity: .9;
+    top: 20%;
+    left: 35%;
+    position: fixed;
 
 }
 
