update ignore old files

--- a/multi-currency-app/src/pages/Login.css
+++ b/multi-currency-app/src/pages/Login.css
@@ -159,10 +159,10 @@ body.before {
 }
 
 
-.alert{
+/* .alert{
     background-color: whitesmoke;
     color: red;
     text-align: center;
     margin-top: 20px;
     text-align: left;
-}
+} */
