--- a/multi-currency-app/src/pages/Login.css
+++ b/multi-currency-app/src/pages/Login.css
@@ -119,7 +119,8 @@ body.before {
 
 .profileSideBar {
     height: 100vh;
-    width: 130px;
+    /* width: 130px; */
+    width: 10%;
     left: 10px;
     background: linear-gradient(rgba(70, 64, 156, 0.548), rgba(0, 0, 0, .9)), url(side.jpeg);
     background-position: center;
@@ -127,6 +128,7 @@ body.before {
     background-size: cover;
     box-shadow: 5px 7px 15px #999;
     color: #ffffff;
+    float:left;
 }
 
 .profileSideBar i{
